--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
@@ -28,6 +31,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
+
+    // io.netty
+    implementation 'io.netty:netty-all:4.1.44.Final'
+    implementation 'org.apache.logging.log4j:log4j-core:2.13.0'
+    annotationProcessor 'org.apache.logging.log4j:log4j-core:2.13.0'
 
     // Retrofit and JSON
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
